# langres

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  TODOS.md  mkdocs.yml  pyproject.toml
.claude/: dave-manifest.json  settings.json
.claude/agents/: code-reviewer.md  data-pipeline-reviewer.md  database-expert.md  dave-arch-researcher.md  dave-architect.md  dave-change-summarizer.md  dave-learning-extractor.md  dave-plan-checker.md  dave-research-synthesizer.md  dave-review-aggregator.md  dave-state-inspector.md  dave-topic-researcher.md  practical-verifier.md  security-reviewer.md  tdd-developer.md
.claude/rules/: component-design.md  context-management.md  data-safety.md  expert-knowledge.md  python-style.md  testing.md  token-efficiency.md
.codex/: config.toml
.codex/agents/: code-reviewer.toml  data-pipeline-reviewer.toml  database-expert.toml  dave-arch-researcher.toml  dave-architect.toml  dave-change-summarizer.toml  dave-learning-extractor.toml  dave-plan-checker.toml  dave-research-synthesizer.toml  dave-review-aggregator.toml  dave-state-inspector.toml  dave-topic-researcher.toml  practical-verifier.toml  security-reviewer.toml  tdd-developer.toml
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  codeql.yml  docs.yml  lint.yml  publish.yml  scorecard.yml  security.yml  test.yml
docs/: ADDING_A_METHOD.md  BENCHMARKS.md  CHANGELOG.md  DEPENDENCIES.md  DOCS.md  DX_RESOLVER.md  EXPERIMENTS.md  FRICTION_LOG.md  FUTURE.md  GETTING_STARTED.md  HUGGING_FACE.md  ISSUES.md  M3_DIRECTION_MEMO.md  POC.md  REPRODUCIBILITY.md  RESOURCES.md  RESOURCE_API.md  ROADMAP.md  TECHNICAL_OVERVIEW.md  TESTING_AT_ZERO_COST.md  THEORY.md  TUTORIAL_YOUR_OWN_CSV.md  USE_CASES.md  index.md
docs/javascripts/: mathjax.js
docs/plans/: 20260708_eval_readiness_plan.md  20260708_tracking_observability_plan.md  20260713_training_loop_plan.md  20260715_data_layer_plan.md  20260718_research_execution_foundation_plan.md
docs/reference/: architectures.md  blockers.md  clusterers.md  comparators.md  data-profile.md  eval-report.md  eval.md  flywheel.md  index.md  judges.md  langres.md  research-vocabulary.md  resolver.md
docs/research/: 20260701_er_seam_audit.md  20260702_w1_trained_family_results.md  20260703_w2_person_benchmark_results.md  20260703_w3_paid_smoke_results.md  20260707_data_prep_hard_case_mining_survey.md  20260709_cost_accounting_design.md  20260710_dx_audit_examples_we_wish_we_had.md  20260710_logprob_credence_probe.md  20260713_model_identity_and_hub.md  20260714_training_surface_design.md  20260715_data_prep_architecture.md  20260716_import_graph_baseline.md  20260716_w2_partition_remeasure.md  20260717_research_agenda.md  README.md
examples/: README.md  basic_usage.py  blocking_evaluation_comprehensive_comparison.py  blocking_evaluation_faiss_vs_qdrant.py  blocking_evaluation_with_instructions.py  blocking_evaluation_with_reranking.py  canonicalizer_enrichment.py  curation_loop.py  deduplication_cached_faiss_simple.py  deduplication_example.py  deduplication_with_blocker_optimization.py  embedding_separability.py  finetune_capstone.py  flywheel_closed_loop.py  flywheel_min.py  flywheel_threshold_harvest.py  incremental_assign.py  instruction_embeddings_demo.py  judgement_log_demo.py  m1_bootstrap_fodors_zagat.py  m2_walking_skeleton_fodors_zagat.py  m3_race.py  m3_regrade_subsample.py  m3_report.py  m3_zero_spend_race.py  m3_zero_spend_race_output.md  m4_calibration.py  m4_dspy_judge.py  m4_experiment_loop.py  m4_race.py  op_reranker_expressiveness.py  person_resolution.py  phase1_blocker_optimization.py  phase2_full_pipeline.py  quickstart_eval.py  quickstart_mining.py  quickstart_models.py  quickstart_profile.py  quickstart_verbs.py  recipe_lift_proof.py  (+9 more)
examples/research/: README.md  _flywheel_paid_common.py  _research_foundation.py  analyze_logprob_credence.py  blocker_evaluation_comprehensive.py  blocker_evaluation_demo.py  blocking_evaluation_comprehensive_comparison.py  blocking_evaluation_faiss_vs_qdrant.py  blocking_evaluation_with_instructions.py  blocking_evaluation_with_reranking.py  blocking_recall_autoresearch.py  debug_pipeline.py  deduplication_cached_faiss_simple.py  deduplication_with_blocker_optimization.py  experiment_matrix.py  experiment_tracking_demo.py  first_experiment.py  flywheel_amazon_google.py  flywheel_fz_smoke.py  generate_smoke_table.py  hub_lifecycle.py  instruction_embeddings_demo.py  m1_bootstrap_fodors_zagat.py  m2_walking_skeleton_fodors_zagat.py  m3_race.py  m3_regrade_subsample.py  m3_report.py  m3_zero_spend_race.py  m3_zero_spend_race_output.md  m4_calibration.py  m4_dspy_judge.py  m4_experiment_loop.py  m4_race.py  official_paid_proof.py  peeters_llm_em_replication.py  phase1_blocker_optimization.py  phase1_llm_placement.py  phase1_rf_floor.py  phase2_full_pipeline.py  portfolio_race.py  (+9 more)
src/langres/: __init__.py  _method_names.py  _pretrained_artifact.py  _version.py  cli.py  eval.py  hub.py  methods.py  optimize.py  testing.py  verbs.py
tests/: conftest.py  test_cli.py  test_eval.py  test_export_fragments.py  test_flywheel_integration.py  test_import_budget.py  test_import_graph.py  test_import_tangle.py  test_integration_approach1.py  test_integration_approach3.py  test_methods.py  test_mlflow_tracker.py  test_optimize.py  test_public_surface_dod.py  test_rapidfuzz_module.py  test_resolver_config_dict.py  test_resolver_roundtrip.py  test_runs.py  test_testing.py  test_trackers.py  test_trackio_tracker.py  test_verbs.py  test_wandb_tracker.py  test_wheel_contents.py
tests/architectures/: test_reranker.py  test_research_recipes.py  test_w4_proofs.py
tests/autoresearch/: __init__.py  test_blocker_optimizer.py  test_factory.py  test_loop.py  test_objective.py  test_search_space.py
tests/benchmarks/: __init__.py  test_benchmark.py
tests/bootstrap/: __init__.py  test_bootstrapper.py  test_labelers.py  (+5 more)
tools/: import_graph.py  refactor_target_packages.json
(+652 files in other folders)
