[project]
name = "langres"
version = "0.2.0"
description = "A two-layer entity resolution framework with optimization, blocking, and human-in-the-loop capabilities"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "David Graf", email = "david@raisesquad.com" }
]
maintainers = [
    { name = "David Graf", email = "david@raisesquad.com" }
]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.5",
    "numpy>=2.4.6",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "rapidfuzz>=3.14.1",
]

keywords = [
    "entity-resolution",
    "record-linkage",
    "deduplication",
    "data-matching",
    "ml",
    "llm",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/raisesquad/langres"
Issues = "https://github.com/raisesquad/langres/issues"
Changelog = "https://github.com/raisesquad/langres/blob/main/CHANGELOG.md"

[project.scripts]
# Console-script entry point for the `langres` CLI (review / export-csv /
# import-csv). Hand-edited: uv/hatchling do not manage [project.scripts].
langres = "langres.cli:main"

[project.optional-dependencies]
# The embedding/vector stack -- VectorBlocker, embeddings.py, indexes.py
# (FAISS + Qdrant). Required for judge="embedding" and the VectorBlocker
# scaling path (dedupe() above ~100 records).
semantic = [
    "faiss-cpu>=1.12.0",
    "fastembed>=0.7.3",
    "onnxruntime>=1.23.2",
    "optimum[onnxruntime]>=2.0.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.12.1",
]
# The LLM/judge stack -- LLMJudge, DSPyJudge, CascadeModule's OpenAI client.
# Required for judge="zero_shot_llm" / judge="auto" with a key set.
llm = [
    "dspy-ai>=3.0.3",
    "litellm>=1.79.0",
    "openai>=2.6.1",
]
# The trained-judge stack -- RandomForestJudge (W1.2's sklearn RandomForest judge) and
# core.calibration.derive_threshold (sklearn.metrics.roc_curve). Also present
# in the dev group below (unrelated eval tooling depends on it too, and the
# repo's own test suite needs it without requiring --all-extras locally).
trained = [
    "scikit-learn>=1.7.2",
]
# Experiment-tracking backends for the ExperimentTracker seam (core/trackers/).
# Each is loaded lazily by its adapter (mlflow_tracker.py / wandb_tracker.py) so
# `import langres` never pulls them -- installing the extra names the fix that
# resolve_tracker's ImportError points at (`pip install 'langres[mlflow]'`).
mlflow = [
    "mlflow>=2.9",
]
wandb = [
    "wandb>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    # Experimentation/eval tooling (BCubed harness via ranx, hyperparameter
    # tuning via optuna) plus experiment-tracking integrations (wandb,
    # langfuse) -- not needed by the production link()/dedupe() path, so they
    # live in the dev group (not a pip-installable extra) rather than core
    # `dependencies`. scikit-learn is also duplicated in the `[trained]`
    # extra above (RandomForestJudge, core.calibration) -- kept here too so the repo's
    # own test suite doesn't need --all-extras for a bare `uv sync`.
    "guarddog>=1.3.0",
    "langfuse>=4,<5",
    "mlflow>=2.9",
    "mypy>=1.18.2",
    "optuna>=4.5.0",
    "optuna-integration[wandb]>=4.5.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ranx>=0.3.21",
    "ruff>=0.15.2",
    "scikit-learn>=1.7.2",
    "testcontainers[qdrant]>=4.13.2",
    "types-networkx>=3.5.0.20251001",
    "wandb>=0.22.3",
]

[tool.uv]
# 7-day supply-chain quarantine: resolution only picks packages published at
# least 7 days ago, giving time for malicious uploads to be caught and
# yanked. Roll this forward with `make upgrade-deps`.
exclude-newer = "2026-06-18"
# To block a known-bad version, uncomment and set:
# constraint-dependencies = ["somepkg!=1.2.3"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=langres --cov-report=term-missing --cov-report=html --cov-fail-under=90 -m 'not integration'"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow running (e.g., embedding models, ML inference)",
    "integration: marks tests that require external API credentials or resources. DO NOT use for testcontainer database tests (fast enough for continuous testing).",
]

[tool.coverage.run]
source = ["langres"]
omit = ["*/tests/*", "*/__pycache__/*", "*/conftest.py"]
branch = true

[tool.coverage.report]
# Relaxed, repo-wide floor for the tiered coverage policy (see
# .claude/rules/testing.md): high (95-100%) on the src/langres/core/**
# library contract, behavior/smoke on benchmark/experiment/harness code, so
# the blended whole-repo floor sits below the core tier. Kept simple (one
# floor, no per-module omit lists). Gated weekly by test-full, not per-PR.
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable flake8-print rules to ban print statements (except in examples/)
select = ["T201", "T203"]

[tool.ruff.lint.per-file-ignores]
# Allow print statements in examples and notebooks
"examples/**/*.py" = ["T201", "T203"]
"*.ipynb" = ["T201", "T203"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
# faiss ships type information in some environments (CI) but not others (local),
# so an inline `# type: ignore[import-untyped]` flips between "needed" and
# "unused" — and an unused ignore fails strict mode's warn_unused_ignores.
# Silencing the missing-import check here is stable across both.
module = ["faiss.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# litellm ships type info in some installs but not others, and under strict
# `no_implicit_reexport` an attribute like `litellm.completion_cost` flips
# between typed (needs an inline `# type: ignore[attr-defined]`) and untyped
# (the ignore is unused — which fails `warn_unused_ignores`). Treat litellm as
# untyped uniformly so neither side flips. `create_llm_client` already returns
# `Any`, so this introduces no `warn_return_any` regressions.
module = ["litellm.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# dspy (dspy-ai) ships partial/optional type info that flips typed↔untyped across
# installs, so an inline ignore on an attribute like `dspy.LM` alternates between
# "needed" and "unused" (the latter fails strict `warn_unused_ignores`). Treat
# dspy as untyped uniformly and skip following its imports — the DSPyJudge already
# annotates its own public surface and holds the program as `Any`.
module = ["dspy.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# scikit-learn ships partial type info that flips typed↔untyped across installs,
# so an inline `# type: ignore[import-untyped]` on `from sklearn.metrics import
# roc_curve` alternates between "needed" and "unused" (the latter fails strict
# `warn_unused_ignores`). Silencing the missing-import check here is stable
# across both — mirroring the faiss/litellm/dspy blocks above.
module = ["sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# mlflow is an optional `[mlflow]` extra: present in CI/dev, absent in a
# core-only install, so `import mlflow` in trackers/mlflow_tracker.py flips
# between resolvable and unresolvable. Silencing the missing-import check here
# is stable across both — mirroring the faiss/litellm/dspy/sklearn blocks above.
module = ["mlflow.*"]
ignore_missing_imports = true
