[project]
name = "langres"
version = "0.3.0"
description = "A two-layer entity resolution framework with optimization, blocking, and human-in-the-loop capabilities"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "David Graf", email = "hire@grafdavid.com" }
]
maintainers = [
    { name = "David Graf", email = "hire@grafdavid.com" }
]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.5",
    "numpy>=2.4.6",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "rapidfuzz>=3.14.1",
]

keywords = [
    "entity-resolution",
    "record-linkage",
    "deduplication",
    "data-matching",
    "ml",
    "llm",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/fxd24/langres"
Issues = "https://github.com/fxd24/langres/issues"
Changelog = "https://github.com/fxd24/langres/blob/main/CHANGELOG.md"

[project.scripts]
# Console-script entry point for the `langres` CLI (review / export-csv /
# import-csv). Hand-edited: uv/hatchling do not manage [project.scripts].
langres = "langres.cli:main"

[project.optional-dependencies]
# The embedding/vector stack -- VectorBlocker, embeddings.py, indexes.py
# (FAISS + Qdrant). Required for judge="embedding" and the VectorBlocker
# scaling path (dedupe() above ~100 records).
semantic = [
    "faiss-cpu>=1.12.0",
    "fastembed>=0.7.3",
    "onnxruntime>=1.23.2",
    "optimum[onnxruntime]>=2.0.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.12.1",
]
# The LLM/judge stack -- LLMJudge, DSPyJudge, CascadeModule's OpenAI client.
# Required for judge="zero_shot_llm" / judge="auto" with a key set.
llm = [
    "dspy-ai>=3.0.3",
    "litellm>=1.79.0",
    "openai>=2.6.1",
]
# The trained-judge stack -- RandomForestJudge (W1.2's sklearn RandomForest judge) and
# core.calibration.derive_threshold (sklearn.metrics.roc_curve). Also present
# in the dev group below (unrelated eval tooling depends on it too, and the
# repo's own test suite needs it without requiring --all-extras locally).
trained = [
    "scikit-learn>=1.7.2",
]
# The evaluation stack -- ranking metrics (MRR/NDCG/MAP) in
# core.metrics.evaluate_blocking_with_ranking, which back the eval harness path.
# ranx is imported lazily (only when those metrics are computed), so the rest of
# core.metrics / core.benchmark stays importable without this extra. Also present
# in the dev group below (kept there so the repo's own test suite runs on a bare
# `uv sync`), the same duplication pattern as scikit-learn / `[trained]`.
eval = [
    "ranx>=0.3.21",
]
# The fine-tune stack -- QLoRA training in core.finetune (peft LoRA adapters +
# trl SFT). Kept OUT of every normal CI job (they run
# `uv sync --all-extras --no-extra finetune`); one dedicated `test-finetune` job
# installs it. peft/trl/bitsandbytes import lazily inside core.finetune (never at
# module load -- locked by tests/test_import_budget.py). This extra adds only the
# training-specific deps; it complements `[semantic]` (torch/transformers, used to
# load + serve the model) and `[llm]` (LLMMatcher serving) -- the full train+serve
# install is `pip install 'langres[semantic,llm,finetune]'`.
finetune = [
    "peft>=0.13",
    "trl>=0.12",
    # QLoRA 4-bit quantization is CUDA-only, so scope bitsandbytes to Linux (CI's
    # runner + the GPU box). On macOS/other platforms core.finetune falls back to
    # a non-quantized LoRA fine-tune (no 4-bit) so the path still runs locally.
    "bitsandbytes>=0.44; platform_system == 'Linux'",
    # NOTE: unsloth is deliberately NOT required here -- it is fragile to install
    # across platforms/CUDA versions. peft+trl+bitsandbytes is the portable QLoRA
    # path; install unsloth yourself (`pip install unsloth`) for its speedups.
]
# Experiment-tracking backends for the ExperimentTracker seam (core/trackers/).
# Each is loaded lazily by its adapter (mlflow_tracker.py / wandb_tracker.py) so
# `import langres` never pulls them -- installing the extra names the fix that
# resolve_tracker's ImportError points at (`pip install 'langres[mlflow]'`).
mlflow = [
    "mlflow>=2.9",
]
wandb = [
    "wandb>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Hand-edited: uv does not manage [tool.hatch.*] tables.
# Keep the PyPI artifacts slim and license-clean: the large third-party
# DeepMatcher/Magellan benchmark corpora (vendored for research
# reproducibility; ATTRIBUTION.md but no explicit redistribution license) ship
# in the git repository only -- they were ~14.1 MB of the 15.6 MB uncompressed
# wheel. Loading an excluded dataset from a pip/uv install raises
# BenchmarkDataNotFoundError (langres/data/_benchmark_utils.py) pointing at a
# git checkout. Still bundled: tiny_fixture (synthetic), febrl_person
# (synthetic, BSD-3), fodors_zagat (small), and the peeters_sampled_test.csv
# pair sets (id/label triples only -- no third-party record text, and the
# replication seam's sampling stays inspectable from the wheel).
exclude = [
    "src/langres/data/datasets/dblp_acm/*.csv",
    "src/langres/data/datasets/dblp_scholar/*.csv",
    "src/langres/data/datasets/walmart_amazon/*.csv",
    "src/langres/data/datasets/wdc_computers/*.csv",
    # abt_buy / amazon_google: keep peeters_sampled_test.csv, drop tables + splits
    "src/langres/data/datasets/abt_buy/tableA.csv",
    "src/langres/data/datasets/abt_buy/tableB.csv",
    "src/langres/data/datasets/abt_buy/train.csv",
    "src/langres/data/datasets/abt_buy/valid.csv",
    "src/langres/data/datasets/abt_buy/test.csv",
    "src/langres/data/datasets/amazon_google/tableA.csv",
    "src/langres/data/datasets/amazon_google/tableB.csv",
    "src/langres/data/datasets/amazon_google/train.csv",
    "src/langres/data/datasets/amazon_google/valid.csv",
    "src/langres/data/datasets/amazon_google/test.csv",
]

[dependency-groups]
dev = [
    # Experimentation/eval tooling (hyperparameter tuning via optuna) plus
    # experiment-tracking integrations (wandb, langfuse) -- not needed by the
    # production link()/dedupe() path, so they live in the dev group (not a
    # pip-installable extra) rather than core `dependencies`. optuna/wandb/
    # langfuse stay dev-only. ranx (below) now also backs the `[eval]` extra
    # (ranking metrics) but is duplicated here so the repo's own test suite
    # runs on a bare `uv sync`; scikit-learn / `[trained]` follow the same
    # duplication pattern.
    "guarddog>=1.3.0",
    "langfuse>=4,<5",
    "mlflow>=2.9",
    "mypy>=1.18.2",
    "optuna>=4.5.0",
    "optuna-integration[wandb]>=4.5.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ranx>=0.3.21",
    "ruff>=0.15.2",
    "scikit-learn>=1.7.2",
    "testcontainers[qdrant]>=4.13.2",
    "types-networkx>=3.5.0.20251001",
    "wandb>=0.22.3",
]
# Documentation-site toolchain (mkdocs.yml + .github/workflows/docs.yml).
# A dependency group, not a runtime extra: `uv sync` stays core-only; build
# the site with `uv run --group docs mkdocs build --strict`.
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.uv]
# 7-day supply-chain quarantine: resolution only picks packages published at
# least 7 days ago, giving time for malicious uploads to be caught and
# yanked. Roll this forward with `make upgrade-deps`.
exclude-newer = "2026-06-18"
# To block a known-bad version, uncomment and set:
# constraint-dependencies = ["somepkg!=1.2.3"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=langres --cov-report=term-missing --cov-report=html --cov-fail-under=90 -m 'not integration and not finetune'"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow running (e.g., embedding models, ML inference)",
    "integration: marks tests that require external API credentials or resources. DO NOT use for testcontainer database tests (fast enough for continuous testing).",
    "finetune: marks tests that require the [finetune] extra (peft/trl/bitsandbytes). Run only in the dedicated `test-finetune` CI job (uv sync --all-extras); excluded elsewhere via `--no-extra finetune`.",
]

[tool.coverage.run]
source = ["langres"]
omit = ["*/tests/*", "*/__pycache__/*", "*/conftest.py"]
branch = true

[tool.coverage.report]
# Relaxed, repo-wide floor for the tiered coverage policy (see
# .claude/rules/testing.md): high (95-100%) on the src/langres/core/**
# library contract, behavior/smoke on benchmark/experiment/harness code, so
# the blended whole-repo floor sits below the core tier. Kept simple (one
# floor, no per-module omit lists). Gated weekly by test-full, not per-PR.
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable flake8-print rules to ban print statements (except in examples/)
select = ["T201", "T203"]

[tool.ruff.lint.per-file-ignores]
# Allow print statements in examples and notebooks
"examples/**/*.py" = ["T201", "T203"]
"*.ipynb" = ["T201", "T203"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
# faiss ships type information in some environments (CI) but not others (local),
# so an inline `# type: ignore[import-untyped]` flips between "needed" and
# "unused" — and an unused ignore fails strict mode's warn_unused_ignores.
# Silencing the missing-import check here is stable across both.
module = ["faiss.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# litellm ships type info in some installs but not others, and under strict
# `no_implicit_reexport` an attribute like `litellm.completion_cost` flips
# between typed (needs an inline `# type: ignore[attr-defined]`) and untyped
# (the ignore is unused — which fails `warn_unused_ignores`). Treat litellm as
# untyped uniformly so neither side flips. `create_llm_client` already returns
# `Any`, so this introduces no `warn_return_any` regressions.
module = ["litellm.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# dspy (dspy-ai) ships partial/optional type info that flips typed↔untyped across
# installs, so an inline ignore on an attribute like `dspy.LM` alternates between
# "needed" and "unused" (the latter fails strict `warn_unused_ignores`). Treat
# dspy as untyped uniformly and skip following its imports — the DSPyJudge already
# annotates its own public surface and holds the program as `Any`.
module = ["dspy.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# scikit-learn ships partial type info that flips typed↔untyped across installs,
# so an inline `# type: ignore[import-untyped]` on `from sklearn.metrics import
# roc_curve` alternates between "needed" and "unused" (the latter fails strict
# `warn_unused_ignores`). Silencing the missing-import check here is stable
# across both — mirroring the faiss/litellm/dspy blocks above.
module = ["sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# mlflow is an optional `[mlflow]` extra: present in CI/dev, absent in a
# core-only install, so `import mlflow` in trackers/mlflow_tracker.py flips
# between resolvable and unresolvable. Silencing the missing-import check here
# is stable across both — mirroring the faiss/litellm/dspy/sklearn blocks above.
module = ["mlflow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# transformers (present via [semantic]) and peft (the [finetune] extra, absent
# in a core-only/CI install) back the in-process serve backend (PR-E).
# transformers ships partial type info that flips typed↔untyped across installs —
# untyped calls like `AutoModelForCausalLM.from_pretrained` / `model.eval()`
# alternate between fine and `no-untyped-call` — and peft is simply unresolvable
# without [finetune]. Treat both as untyped uniformly and skip following their
# imports, mirroring the litellm/dspy blocks; the backend annotates its own public
# surface (it holds the model/tokenizer as `Any`).
module = ["transformers.*", "peft.*", "trl.*", "bitsandbytes.*"]
ignore_missing_imports = true
follow_imports = "skip"
